优化user configuration 显示

--- a/flink-runtime-web/web-dashboard/old-version/partials/jobs/job.config.html
+++ b/flink-runtime-web/web-dashboard/old-version/partials/jobs/job.config.html
@@ -51,7 +51,7 @@ limitations under the License.
   <tbody>
     <tr ng-repeat="(propertyName, propertyValue) in job['execution-config']['user-config']">
       <td>{{propertyName}}</td>
-      <td table-property="table-property" value="propertyValue"></td>
+      <td style="white-space:pre-wrap" table-property="table-property" value="propertyValue"></td>
     </tr>
   </tbody>
 </table>
