--- a/flink-runtime-web/web-dashboard/src/app/pages/job-manager/sr/job-manager-sr.component.less
+++ b/flink-runtime-web/web-dashboard/src/app/pages/job-manager/sr/job-manager-sr.component.less
@@ -15,20 +15,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-import { ChangeDetectionStrategy, Component } from '@angular/core';
-
-@Component({
-  selector: 'flink-job-manager',
-  templateUrl: './job-manager.component.html',
-  styleUrls: ['./job-manager.component.less'],
-  changeDetection: ChangeDetectionStrategy.OnPush
-})
-export class JobManagerComponent {
-  listOfNavigation = [
-    { path: 'config', title: 'Configuration' },
-    { path: 'logs', title: 'Logs' },
-    { path: 'stdout', title: 'Stdout' },
-    { path: 'sr', title: 'SmartResource'}
-  ];
+nz-card {
+  display: block;
+  margin-bottom: 24px;
 }
