--- a/flink-runtime-web/web-dashboard/src/app/pages/job/overview/list/job-overview-list.component.html
+++ b/flink-runtime-web/web-dashboard/src/app/pages/job/overview/list/job-overview-list.component.html
@@ -67,9 +67,9 @@
         </span>
       </td>
       <td>{{ node.parallelism }}</td>
-      <td>{{ node.detail["start-time"] | humanizeDate: 'yyyy-MM-dd HH:mm:ss' }}</td>
+      <td>{{ node.detail["start-time"] | humanizeDate: 'yyyy-MM-dd HH:mm:ss.SSS' }}</td>
       <td>{{ node.detail?.duration | humanizeDuration }}</td>
-      <td>{{ node.detail["end-time"] | humanizeDate: 'yyyy-MM-dd HH:mm:ss' }}</td>
+      <td>{{ node.detail["end-time"] | humanizeDate: 'yyyy-MM-dd HH:mm:ss.SSS' }}</td>
       <td nzRight="0px" [class.selected]="selectedNode?.id === node.id">
         <flink-task-badge [tasks]="node.detail?.tasks"></flink-task-badge>
       </td>
