--- a/flink-runtime-web/web-dashboard/src/app/pages/job/overview/taskmanagers/job-overview-drawer-taskmanagers.component.html
+++ b/flink-runtime-web/web-dashboard/src/app/pages/job/overview/taskmanagers/job-overview-drawer-taskmanagers.component.html
@@ -68,8 +68,8 @@
           {{ taskManager.metrics['write-records'] | number }}
         </span>
       </td>
-      <td>{{ taskManager['start-time'] | humanizeDate:'yyyy-MM-dd HH:mm:ss' }}</td>
-      <td>{{ taskManager['end-time'] | humanizeDate:'yyyy-MM-dd HH:mm:ss' }}</td>
+      <td>{{ taskManager['start-time'] | humanizeDate:'yyyy-MM-dd HH:mm:ss.SSS' }}</td>
+      <td>{{ taskManager['end-time'] | humanizeDate:'yyyy-MM-dd HH:mm:ss.SSS' }}</td>
       <td>{{ taskManager['duration'] | humanizeDuration }}</td>
       <td>
         <flink-task-badge [tasks]="taskManager['status-counts']"></flink-task-badge>
