--- a/flink-runtime-web/web-dashboard/src/app/share/customize/job-list/job-list.component.html
+++ b/flink-runtime-web/web-dashboard/src/app/share/customize/job-list/job-list.component.html
@@ -37,9 +37,9 @@
     <tbody>
       <tr *ngFor="let job of listOfJob; trackBy:trackJobBy;" (click)="navigateToJob(job.jid)" class="clickable">
         <td>{{ job.name }}</td>
-        <td>{{ job["start-time"] | humanizeDate: 'yyyy-MM-dd HH:mm:ss' }}</td>
+        <td>{{ job["start-time"] | humanizeDate: 'yyyy-MM-dd HH:mm:ss.SSS' }}</td>
         <td>{{ job.duration | humanizeDuration }}</td>
-        <td>{{ job["end-time"] | humanizeDate: 'yyyy-MM-dd HH:mm:ss' }}</td>
+        <td>{{ job["end-time"] | humanizeDate: 'yyyy-MM-dd HH:mm:ss.SSS' }}</td>
         <td>
           <flink-task-badge [tasks]="job.tasks"></flink-task-badge>
         </td>
