--- a/flink-runtime-web/web-dashboard/src/app/share/customize/job-list/job-list.component.html
+++ b/flink-runtime-web/web-dashboard/src/app/share/customize/job-list/job-list.component.html
@@ -30,8 +30,12 @@
         <th nzShowSort nzSortKey="end-time">End Time</th>
         <th>Tasks</th>
         <th nzShowSort nzSortKey="state">Status</th>
-        <th nzShowSort nzSortKey="metric">Metric</th>
-        <th nzShowSort nzSortKey="dtop">Dtop</th>
+        <ng-container *ngIf="statusService.configuration['metricsUrlEnable']">
+          <th nzShowSort nzSortKey="metric">Metric</th>
+        </ng-container>
+        <ng-container *ngIf="statusService.configuration['dtopUrlEnable']">
+          <th nzShowSort nzSortKey="dtop">Dtop</th>
+        </ng-container>
       </tr>
     </thead>
     <tbody>
@@ -46,8 +50,12 @@
         <td>
           <flink-job-badge [state]="job.state"></flink-job-badge>
         </td>
-        <td><a (click)="navigateToUrl(job.metric, $event)">Metric</a></td>
-        <td><a (click)="navigateToUrl(job.dtop, $event)">Dtop</a></td>
+        <ng-container *ngIf="statusService.configuration['metricsUrlEnable']">
+          <td><a (click)="navigateToUrl(job.metric, $event)">Metric</a></td>
+        </ng-container>
+        <ng-container *ngIf="statusService.configuration['dtopUrlEnable']">
+          <td><a (click)="navigateToUrl(job.dtop, $event)">Dtop</a></td>
+        </ng-container>
       </tr>
     </tbody>
   </nz-table>
