--- a/flink-runtime-web/web-dashboard/src/app/share/common/dagre/node.component.less
+++ b/flink-runtime-web/web-dashboard/src/app/share/common/dagre/node.component.less
@@ -32,10 +32,10 @@
     border-radius: 0;
     padding: 15px;
     color: @text-color;
+    background: lighten(@primary-color, 30%);
     text-align: left;
     word-break: break-all;
-    border-width: 1px;
-    border-style: solid;
+    border: 1px solid @primary-color;
 
     .content-wrap {
       font-size: 12px;
@@ -51,16 +51,15 @@
         margin-top: 24px;
       }
 
-      &.metric {
+      &.watermark {
         font-weight: normal;;
         font-weight: 12px;
-        margin-bottom: 2px;
         color: @text-color-secondary;
       }
     }
 
     .detail {
-      margin-bottom: 2px;
+      margin-bottom: 12px;
       color: @text-color;
       &.description {
         color: @heading-color;
